--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,6 +1,6 @@
 {
     "home.lang": "en",
-    "home.sub_title": "Aluno de Big Data no Agronegócio",
+    "home.sub_title": "Tecnólogo em Big Data no Agronegócio",
     "home.about": "Sobre",
     "home.description": "Olá, bem vindo ao meu web site, me chamo Lucas de Brito Silva e possuo {{idade}} anos. Considero-me um entusiasta em Tecnologia e sou motivado pelos meus sonhos, em que para realiza-los, busquei capacitar-me com a formação no curso Técnico de Computação na ETEC Professor Massuyuki Kawano e atualmente realizo o curso de Big Data no Agronegócio, sendo da primeira turma a se formar no Brasil. Espero que você tenha prazer em desbravar meu site, vamos nessa?"
 }
