--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,5 +2,5 @@
     "home.lang": "pt",
     "home.sub_title": "Technologist in Big Data in Agribusiness",
     "home.about": "About me",
-    "home.description": "Hi, welcome to my web site, my name is Lucas de Brito Silva and I'm {{idade}} years old. I consider myself an enthusiastic in Technology and I'm motivated by my dreams, and to accomplish them I sought to get qualified with Computer Technician course at ETEC Professor Massuyuki Kawano and I am currently enrolled to Big Data in Agribusiness course, being the first class to graduate in Brazil. I hope you enjoy my site, here we go!"
+    "home.description": "Hello, welcome to my web site, my name is Lucas de Brito Silva and I am {{idade}} years old. I consider myself an enthusiast in Technology and I am motivated by my dreams, in which to realize them, I sought to train myself with the formation in the course Computer Technician at ETEC Professor Massuyuki Kawano, I took the course of Big Data in Agribusiness (being of the first class to graduate in Brazil), besides, currently I am doing Masters in Computer Science. I hope you enjoy browsing my website, shall we?"
 }
