--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,5 +2,6 @@
     "home.lang": "pt",
     "home.sub_title": "Technologist in Big Data in Agribusiness",
     "home.about": "About me",
-    "home.description": "Hello, welcome to my website, my name is Lucas de Brito Silva and I am {{idade}} years old. I consider myself an enthusiast in Technology and I am motivated by my dreams, in which to realize them, I sought to train myself with the Computer Technical course at ETEC Professor Massuyuki Kawano, Big Data in Agribusiness at FATEC Shunji Nishimura (being the first class to graduate in Brazil) and currently I am doing a Masters in Computer Science at São Paulo State University (UNESP). I hope you enjoy browsing my website, shall we?"
+    "home.description": "Hello, welcome to my website, my name is Lucas de Brito Silva and I am {{idade}} years old. I consider myself an enthusiast in Technology and I am motivated by my dreams, in which to realize them, I sought to train myself with the Computer Technical course at ETEC Professor Massuyuki Kawano, Big Data in Agribusiness at FATEC Shunji Nishimura (being the first class to graduate in Brazil) and currently I am doing a Masters in Computer Science at São Paulo State University (UNESP). I hope you enjoy browsing my website, shall we?",
+    "recommendations.title": "Recommendations"
 }
