--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -2,5 +2,6 @@
     "home.lang": "en",
     "home.sub_title": "Tecnólogo em Big Data no Agronegócio",
     "home.about": "Sobre",
-    "home.description": "Olá, bem-vindo ao meu website, me chamo Lucas de Brito Silva e tenho {{idade}} anos. Considero-me um entusiasta em Tecnologia e sou motivado pelos meus sonhos, em que para os realizar, busquei capacitar-me com a formação no curso Técnico de Computação na ETEC Professor Massuyuki Kawano, Big Data no Agronegócio na FATEC Shunji Nishimura (sendo da primeira turma a se formar no Brasil) e atualmente estou fazendo mestrado em Ciência da Computação na Universidade Estadual Paulista \"Júlio de Mesquita Filho\" (UNESP). Espero que você tenha prazer em desbravar meu site, vamos nessa?"
+    "home.description": "Olá, bem-vindo ao meu website, me chamo Lucas de Brito Silva e tenho {{idade}} anos. Considero-me um entusiasta em Tecnologia e sou motivado pelos meus sonhos, em que para os realizar, busquei capacitar-me com a formação no curso Técnico de Computação na ETEC Professor Massuyuki Kawano, Big Data no Agronegócio na FATEC Shunji Nishimura (sendo da primeira turma a se formar no Brasil) e atualmente estou fazendo mestrado em Ciência da Computação na Universidade Estadual Paulista \"Júlio de Mesquita Filho\" (UNESP). Espero que você tenha prazer em desbravar meu site, vamos nessa?",
+    "recommendations.title": "Recomendações"
 }
