feat(navbar.component): add navbar language support

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,5 +1,7 @@
 {
     "lang": "en",
+    "nav.publications": "Publicações",
+    "nav.home": "Inicio",
     "home.sub_title": "Tecnólogo em Big Data no Agronegócio",
     "home.about": "Sobre",
     "home.description": "Olá, bem-vindo ao meu website, me chamo Lucas de Brito Silva e tenho {{idade}} anos. Considero-me um entusiasta em Tecnologia e sou motivado pelos meus sonhos, em que para os realizar, busquei capacitar-me com a formação no curso Técnico de Computação na ETEC Professor Massuyuki Kawano, Big Data no Agronegócio na FATEC Shunji Nishimura (sendo da primeira turma a se formar no Brasil) e atualmente estou fazendo mestrado em Ciência da Computação na Universidade Estadual Paulista \"Júlio de Mesquita Filho\" (UNESP). Espero que você tenha prazer em desbravar meu site, vamos nessa?",
