--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,12 +1,15 @@
 {
-    "lang": "pt",
-    "nav.publications": "Publications",
-    "nav.home": "Home",
     "home.sub_title": "Technologist in Big Data in Agribusiness",
     "home.about": "About me",
     "home.description": "Hello, welcome to my website, my name is Lucas de Brito Silva and I am {{idade}} years old. I consider myself an enthusiast in Technology and I am motivated by my dreams, in which to realize them, I sought to train myself with the Computer Technical course at ETEC Professor Massuyuki Kawano, Big Data in Agribusiness at FATEC Shunji Nishimura (being the first class to graduate in Brazil) and currently I am doing a Masters in Computer Science at São Paulo State University (UNESP). I hope you enjoy browsing my website, shall we?",
+    "lang": "pt",
+    "nav.publications": "Publications",
+    "nav.home": "Home",
     "not_found.sub": "Something went wrong...",
     "not_found.sub_2": "Page not found!",
     "not_found.back_button": "Back to Home",
+    "publi.title": "Publications",
+    "publi.description": "Usually I like to write to 1) contribute to the community and 2) to consolidate my knowledge. The subjects that I deal with the most are related to technology, methods, computer vision, some learning of the moment or a certain subject that goes along with what I'm doing at the moment, thus trying to help people in the same way I'm helped. Feel free to read more of my posts by logging into my Medium or Dev Community by clicking on the icons below, or to view my latest posts below.",
+    "publi.read-more": "Learn more",
     "recommendations.title": "Recommendations"
 }
