--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,12 +1,15 @@
 {
-    "lang": "en",
-    "nav.publications": "Publicações",
-    "nav.home": "Inicio",
     "home.sub_title": "Tecnólogo em Big Data no Agronegócio",
     "home.about": "Sobre",
     "home.description": "Olá, bem-vindo ao meu website, me chamo Lucas de Brito Silva e tenho {{idade}} anos. Considero-me um entusiasta em Tecnologia e sou motivado pelos meus sonhos, em que para os realizar, busquei capacitar-me com a formação no curso Técnico de Computação na ETEC Professor Massuyuki Kawano, Big Data no Agronegócio na FATEC Shunji Nishimura (sendo da primeira turma a se formar no Brasil) e atualmente estou fazendo mestrado em Ciência da Computação na Universidade Estadual Paulista \"Júlio de Mesquita Filho\" (UNESP). Espero que você tenha prazer em desbravar meu site, vamos nessa?",
+    "lang": "en",
+    "nav.publications": "Publicações",
+    "nav.home": "Inicio",
     "not_found.sub": "Ops...",
     "not_found.sub_2": "A página não foi encontrada!",
     "not_found.back_button": "Voltar ao Início",
+    "publi.title": "Publicações",
+    "publi.description": "Normalmente eu gosto de escrever para 1) contribuir com a comunidade e 2) para consolidar meu conhecimento. Os assuntos que mais trato são relacionados a tecnologia, métodologias, visão computacional, algum aprendizado do momento ou um determinado assunto que vai de encontro com o que estou fazendo no momento, tentando, assim, ajudar pessoas do mesmo modo em que sou ajudado. Fique a vontade para ler mais das minhas publicações entrando no meu Medium ou Dev Community clicando nos icones abaixo, ou para visualizar minhas últimas publicações abaixo.",
+    "publi.read-more": "Leia mais",
     "recommendations.title": "Recomendações"
 }
