refactor: changing text related to publications

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -9,7 +9,7 @@
     "not_found.sub_2": "A página não foi encontrada!",
     "not_found.back_button": "Voltar ao Início",
     "publi.title": "Publicações",
-    "publi.description": "Normalmente eu gosto de escrever para 1) contribuir com a comunidade e 2) para consolidar meu conhecimento. Os assuntos que mais trato são relacionados a tecnologia, métodologias, visão computacional, algum aprendizado do momento ou um determinado assunto que vai de encontro com o que estou fazendo no momento, tentando, assim, ajudar pessoas do mesmo modo em que sou ajudado. Fique a vontade para ler mais das minhas publicações entrando no meu Medium ou Dev Community clicando nos icones abaixo, ou para visualizar minhas últimas publicações abaixo.",
+    "publi.description": "Gosto de escrever para contribuir com a comunidade e para consolidar meu conhecimento. Os assuntos normalmente são ciêntificos ou de tecnologias digitais. Fique a vontade para ler minhas publicações de blog no Medium ou Dev Community, ou as publicações cietificas no Google Schoolar ou ResearchGate.",
     "publi.read-more": "Leia mais",
     "recommendations.title": "Recomendações"
 }
