refactor: changing 'read more' text

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -10,6 +10,6 @@
     "not_found.back_button": "Voltar ao Início",
     "publi.title": "Publicações",
     "publi.description": "Gosto de escrever para contribuir com a comunidade e para consolidar meu conhecimento. Os assuntos normalmente são ciêntificos ou de tecnologias digitais. Fique a vontade para ler minhas publicações de blog no Medium ou Dev Community, ou as publicações cietificas no Google Schoolar ou ResearchGate.",
-    "publi.read-more": "Leia mais",
+    "publi.read-more": "Leia mais...",
     "recommendations.title": "Recomendações"
 }
