--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,15 +1,15 @@
 {
     "home.sub_title": "Tecnólogo em Big Data no Agronegócio",
     "home.about": "Sobre",
-    "home.description": "Olá, bem-vindo ao meu website, me chamo Lucas de Brito Silva e tenho {{idade}} anos. Considero-me um entusiasta em Tecnologia e sou motivado pelos meus sonhos, em que para os realizar, busquei capacitar-me com a formação no curso Técnico de Computação na ETEC Professor Massuyuki Kawano, Big Data no Agronegócio na FATEC Shunji Nishimura (sendo da primeira turma a se formar no Brasil) e atualmente estou fazendo mestrado em Ciência da Computação na Universidade Estadual Paulista \"Júlio de Mesquita Filho\" (UNESP). Espero que você tenha prazer em desbravar meu site, vamos nessa?",
+    "home.description": "Olá, é um prazer recebê-lo em meu site! Meu nome é Lucas de Brito Silva, e aos {{idade}} anos, trilho uma jornada apaixonante na área de Tecnologia. Desde 2021, fiz uma transição da área de desenvolvimento de sistemas e aplicativos para o fascinante mundo dos dados. Atualmente, sou Machine Learning Engineer no <a href=\"https://agibank.com.br/\" target=\"_blank\" >Agibank</a>.<br><br>Minha trajetória inclui a formação no curso Técnico de Computação na ETEC Professor Massuyuki Kawano e o pioneirismo na primeira turma a se formar no Brasil em Big Data no Agronegócio, pela FATEC Shunji Nishimura. Além disso, estou atualmente cursando mestrado em Ciência da Computação na Universidade Estadual Paulista \"Júlio de Mesquita Filho\" (UNESP).<br><br>Meus interesses e paixões residem nas áreas de dados, inteligência computacional, <i>deep learning</i>, visão computacional e <i>machine learning engineering</i>. Espero que você aproveite sua visita ao meu site.",
     "lang": "en",
     "nav.publications": "Publicações",
-    "nav.home": "Inicio",
+    "nav.home": "Início",
     "not_found.sub": "Ops...",
     "not_found.sub_2": "A página não foi encontrada!",
     "not_found.back_button": "Voltar ao Início",
     "publi.title": "Publicações",
-    "publi.description": "Gosto de escrever para contribuir com a comunidade e para consolidar meu conhecimento. Os assuntos normalmente são ciêntificos ou de tecnologias digitais. Fique a vontade para ler minhas publicações de blog no Medium ou Dev Community, ou as publicações cietificas no Google Schoolar ou ResearchGate.",
+    "publi.description": "Gosto de escrever para contribuir com a comunidade e para consolidar meu conhecimento. Os assuntos normalmente são científicos ou de tecnologias digitais. Fique à vontade para ler minhas publicações de blog no Medium ou Dev Community, ou as publicações científicas no Google Scholar ou ResearchGate.",
     "publi.blog-subtitle": "Blog",
     "publi.sci-subtitle": "Publicações Científicas",
     "publi.read-more": "Leia mais...",
