feat: add portfolio navbar

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
     "lang": "pt",
     "nav.publications": "Publications",
     "nav.home": "Home",
+    "nav.portfolio": "Portfolio",
     "not_found.sub": "Something went wrong...",
     "not_found.sub_2": "Page not found!",
     "not_found.back_button": "Back to Home",
