--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -5,6 +5,7 @@
     "lang": "en",
     "nav.publications": "Publicações",
     "nav.home": "Início",
+    "nav.portfolio": "Portfólio",
     "not_found.sub": "Ops...",
     "not_found.sub_2": "A página não foi encontrada!",
     "not_found.back_button": "Voltar ao Início",
