Add hobbies page with books, sports, and setup sections
Add a new hobbies page to the site, including sections for books, sports, and setup, and update the navbar to include a link to this page.

* **Routing and Module Changes**
  - Add a route for the new `HobbiesComponent` in `app-routing.module.ts`.
  - Import `HobbiesComponent` in `app.module.ts` and add it to the declarations array.

* **Navbar Updates**
  - Add a new item to the `itemsList` array for the hobbies page in `navbar.component.ts`.
  - Add a new link to the hobbies page in `navbar.component.html`.

* **Hobbies Component**
  - Create a new `HobbiesComponent` with sections for books, sports, and setup.
  - Add methods to fetch sports data from Strava and display it.
  - Add a search bar and filter options for books.
  - Use Bootstrap cards to display book information.

* **Localization**
  - Add content for the hobbies page in `en.json` and `pt.json`.

* **Strava Service**
  - Create a service to handle Strava API requests and fetch recent activities.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/Lucs1590/Personal_Site?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,10 +1,19 @@
 {
     "home.sub_title": "Technologist in Big Data in Agribusiness",
     "home.about": "About me",
-    "home.description": "Hello, welcome to my website! My name is Lucas de Brito Silva, and at 24, I embark on an exciting journey in the field of Technology. Since 2021, I made a transition from the area of systems and application development to the fascinating world of data. Currently, I am a Machine Learning Engineer at <a href=\"https://agibank.com.br/\" class=\"text-white\" target=\"_blank\">Agibank</a>. <br><br>My journey includes training in the Computer Technician course at ETEC Professor Massuyuki Kawano and pioneering in the first class to graduate in Big Data in Agribusiness, at FATEC Shunji Nishimura. Additionally, I've done a master's degree in Computer Science at São Paulo State University \"Júlio de Mesquita Filho\" (UNESP).<br><br>My interests and passions lie in the areas of data, computational intelligence, deep learning, computer vision, and machine learning engineering. I hope you enjoy your visit to my website.",
+    "home.description": "Hello, welcome to my website! My name is Lucas de Brito Silva, and at 4, I embark on an exciting journey in the field of Technology. Since 2021, I made a transition from the area of systems and application development to the fascinating world of data. Currently, I am a Machine Learning Engineer at <a href=\"https://agibank.com.br/\" class=\"text-white\" target=\"_blank\">Agibank</a>. <br><br>My journey includes training in the Computer Technician course at ETEC Professor Massuyuki Kawano and pioneering in the first class to graduate in Big Data in Agribusiness, at FATEC Shunji Nishimura. Additionally, I've done a master's degree in Computer Science at São Paulo State University \"Júlio de Mesquita Filho\" (UNESP).<br><br>My interests and passions lie in the areas of data, computational intelligence, deep learning, computer vision, and machine learning engineering. I hope you enjoy your visit to my website.",
     "lang": "pt",
     "nav.publications": "Publications",
     "nav.home": "Home",
+    "nav.hobbies": "Hobbies",
+    "hobbies.title": "Hobbies",
+    "hobbies.books.title": "Books",
+    "hobbies.books.read": "Books I've Read",
+    "hobbies.books.reading": "Books I'm Currently Reading",
+    "hobbies.sports.title": "Sports",
+    "hobbies.sports.annualGoals": "Annual Goals",
+    "hobbies.sports.weeklyProgress": "Weekly Progress",
+    "hobbies.setup.title": "Setup",
     "not_found.sub": "Something went wrong...",
     "not_found.sub_2": "Page not found!",
     "not_found.back_button": "Back to Home",
