--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -5,6 +5,15 @@
     "lang": "en",
     "nav.publications": "Publicações",
     "nav.home": "Início",
+    "nav.hobbies": "Hobbies",
+    "hobbies.title": "Hobbies",
+    "hobbies.books.title": "Livros",
+    "hobbies.books.read": "Livros que já li",
+    "hobbies.books.reading": "Livros que estou lendo",
+    "hobbies.sports.title": "Esportes",
+    "hobbies.sports.annualGoals": "Metas Anuais",
+    "hobbies.sports.weeklyProgress": "Progresso Semanal",
+    "hobbies.setup.title": "Setup",
     "not_found.sub": "Ops...",
     "not_found.sub_2": "A página não foi encontrada!",
     "not_found.back_button": "Voltar ao Início",
