--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,5 +19,21 @@
     "publi.blog-not-found": "No blog posts matched your search criteria.",
     "publi.sci-not-found": "No scientific publications matched your search criteria.",
     "publi.tip": "Tip: If you can't find a specific text, try adding \"?search=tag\" after /publication in the URL.",
-    "recommendations.title": "Recommendations"
+    "recommendations.title": "Recommendations",
+    "privacy_policy.title": "Privacy Policy",
+    "privacy_policy.introduction": "Introduction",
+    "privacy_policy.information_collection": "Information Collection",
+    "privacy_policy.information_collection_text": "We collect various types of information from our users, including personal data, usage data, and cookies.",
+    "privacy_policy.use_of_information": "Use of Information",
+    "privacy_policy.use_of_information_text": "The collected information is used to improve our services, personalize user experience, and communicate with users.",
+    "privacy_policy.data_sharing": "Data Sharing",
+    "privacy_policy.data_sharing_text": "User data may be shared with third parties in compliance with legal obligations or partnerships.",
+    "privacy_policy.data_security": "Data Security",
+    "privacy_policy.data_security_text": "We take measures to protect user data from unauthorized access, breaches, or misuse.",
+    "privacy_policy.user_rights": "User Rights",
+    "privacy_policy.user_rights_text": "Users have rights regarding their data, including access, correction, deletion, and opting out of data collection.",
+    "privacy_policy.changes_to_policy": "Changes to Policy",
+    "privacy_policy.changes_to_policy_text": "The Privacy Policy may be updated periodically, and users will be informed of any changes.",
+    "privacy_policy.contact_information": "Contact Information",
+    "privacy_policy.contact_information_text": "For questions or concerns about the Privacy Policy, please contact us."
 }
