Add Privacy Policy component and translations
* **PrivacyPolicyComponent**: Create new Angular component with selector, template URL, and style URLs. Export the class.
* **HTML Template**: Add structure and translation keys for Privacy Policy text.
* **CSS**: Define styles for the component using existing CSS classes.
* **App Module**: Import and declare `PrivacyPolicyComponent`.
* **Translations**: Add translation keys and values for Privacy Policy text in English and Portuguese.
* **Routing**: Add route for `PrivacyPolicyComponent`.
* **robots.txt**: Allow access to privacy policy page.
* **sitemap.xml**: Update with privacy policy page information.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -35,5 +35,6 @@
     "privacy_policy.changes_to_policy": "Changes to Policy",
     "privacy_policy.changes_to_policy_text": "The Privacy Policy may be updated periodically, and users will be informed of any changes.",
     "privacy_policy.contact_information": "Contact Information",
-    "privacy_policy.contact_information_text": "For questions or concerns about the Privacy Policy, please contact us."
+    "privacy_policy.contact_information_text": "For questions or concerns about the Privacy Policy, please contact us.",
+    "privacy_policy.additional_text": "Below is the detailed information regarding our privacy practices:"
 }
