--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -35,5 +35,6 @@
     "privacy_policy.changes_to_policy": "Alterações na Política",
     "privacy_policy.changes_to_policy_text": "A Política de Privacidade pode ser atualizada periodicamente, e os usuários serão informados sobre quaisquer alterações.",
     "privacy_policy.contact_information": "Informações de Contato",
-    "privacy_policy.contact_information_text": "Para perguntas ou preocupações sobre a Política de Privacidade, entre em contato conosco."
+    "privacy_policy.contact_information_text": "Para perguntas ou preocupações sobre a Política de Privacidade, entre em contato conosco.",
+    "privacy_policy.additional_text": "Abaixo estão as informações detalhadas sobre nossas práticas de privacidade:"
 }
