fix: update privacy policy text for clarity and compliance with data protection standards

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -23,18 +23,18 @@
     "privacy_policy.title": "Política de Privacidade",
     "privacy_policy.introduction": "Introdução",
     "privacy_policy.information_collection": "Coleta de Informações",
-    "privacy_policy.information_collection_text": "Coletamos vários tipos de informações de nossos usuários, incluindo dados pessoais, dados de uso e cookies.",
+    "privacy_policy.information_collection_text": "Este site não coleta dados pessoais dos usuários. A única informação processada é o endereço IP do usuário, que é consultado com um serviço de terceiros unicamente para adaptar a configuração de idioma do site (português ou inglês) com base na localização. Isso é feito através de cookies para uma experiência de navegação mais fluida.",
     "privacy_policy.use_of_information": "Uso das Informações",
-    "privacy_policy.use_of_information_text": "As informações coletadas são usadas para melhorar nossos serviços, personalizar a experiência do usuário e comunicar-se com os usuários.",
+    "privacy_policy.use_of_information_text": "As informações coletadas são limitadas às preferências de idioma, permitindo uma experiência personalizada ao exibir o conteúdo no idioma preferido do usuário.",
     "privacy_policy.data_sharing": "Compartilhamento de Dados",
-    "privacy_policy.data_sharing_text": "Os dados dos usuários podem ser compartilhados com terceiros em conformidade com obrigações legais ou parcerias.",
+    "privacy_policy.data_sharing_text": "Nenhum dado pessoal do usuário é coletado ou compartilhado com terceiros. O endereço IP é temporariamente processado por um serviço externo para adaptação do idioma, mas não é armazenado por este site.",
     "privacy_policy.data_security": "Segurança dos Dados",
-    "privacy_policy.data_security_text": "Tomamos medidas para proteger os dados dos usuários contra acesso não autorizado, violações ou uso indevido.",
+    "privacy_policy.data_security_text": "Como nenhum dado pessoal é coletado, as medidas de segurança de dados se aplicam apenas para garantir a integração segura com serviços de terceiros e proteger a funcionalidade do site.",
     "privacy_policy.user_rights": "Direitos dos Usuários",
-    "privacy_policy.user_rights_text": "Os usuários têm direitos em relação aos seus dados, incluindo acesso, correção, exclusão e a opção de não participar da coleta de dados.",
+    "privacy_policy.user_rights_text": "Os usuários podem ajustar suas configurações de cookies para controlar o armazenamento de preferências de idioma. Como nenhum dado pessoal é armazenado, não há direitos adicionais aplicáveis.",
     "privacy_policy.changes_to_policy": "Alterações na Política",
-    "privacy_policy.changes_to_policy_text": "A Política de Privacidade pode ser atualizada periodicamente, e os usuários serão informados sobre quaisquer alterações.",
+    "privacy_policy.changes_to_policy_text": "Esta Política de Privacidade pode ser atualizada periodicamente, especialmente em caso de alterações nos serviços de terceiros que utilizamos.",
     "privacy_policy.contact_information": "Informações de Contato",
-    "privacy_policy.contact_information_text": "Para perguntas ou preocupações sobre a Política de Privacidade, entre em contato conosco.",
-    "privacy_policy.additional_text": "Abaixo estão as informações detalhadas sobre nossas práticas de privacidade:"
+    "privacy_policy.contact_information_text": "Se você tiver dúvidas ou preocupações sobre esta Política de Privacidade, entre em contato conosco.",
+    "privacy_policy.additional_text": "As informações detalhadas sobre nossas práticas de privacidade estão descritas abaixo."
 }
