--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,18 +23,18 @@
     "privacy_policy.title": "Privacy Policy",
     "privacy_policy.introduction": "Introduction",
     "privacy_policy.information_collection": "Information Collection",
-    "privacy_policy.information_collection_text": "We collect various types of information from our users, including personal data, usage data, and cookies.",
+    "privacy_policy.information_collection_text": "This website does not collect any personal data from users. The only information processed is the user's IP address, which is checked with a third-party service solely to adapt the website's language settings (English or Portuguese) based on location. This is done via cookies for a seamless user experience.",
     "privacy_policy.use_of_information": "Use of Information",
-    "privacy_policy.use_of_information_text": "The collected information is used to improve our services, personalize user experience, and communicate with users.",
+    "privacy_policy.use_of_information_text": "The information gathered is limited to language preferences, enabling a customized experience for users by displaying content in their preferred language.",
     "privacy_policy.data_sharing": "Data Sharing",
-    "privacy_policy.data_sharing_text": "User data may be shared with third parties in compliance with legal obligations or partnerships.",
+    "privacy_policy.data_sharing_text": "No personal data of users is collected or shared with third parties. The IP address is briefly processed by a third-party language adaptation service, but it is not stored by this website.",
     "privacy_policy.data_security": "Data Security",
-    "privacy_policy.data_security_text": "We take measures to protect user data from unauthorized access, breaches, or misuse.",
+    "privacy_policy.data_security_text": "As no personal data is collected, data security measures apply only to ensure safe integration with third-party services and protect website functionality.",
     "privacy_policy.user_rights": "User Rights",
-    "privacy_policy.user_rights_text": "Users have rights regarding their data, including access, correction, deletion, and opting out of data collection.",
+    "privacy_policy.user_rights_text": "Users can adjust their cookie settings to control language preference storage. Since no personal data is stored, there are no additional data rights applicable.",
     "privacy_policy.changes_to_policy": "Changes to Policy",
-    "privacy_policy.changes_to_policy_text": "The Privacy Policy may be updated periodically, and users will be informed of any changes.",
+    "privacy_policy.changes_to_policy_text": "This Privacy Policy may be updated periodically, especially if there are changes to the third-party services we use.",
     "privacy_policy.contact_information": "Contact Information",
-    "privacy_policy.contact_information_text": "For questions or concerns about the Privacy Policy, please contact us.",
-    "privacy_policy.additional_text": "Below is the detailed information regarding our privacy practices:"
+    "privacy_policy.contact_information_text": "If you have questions or concerns about this Privacy Policy, please feel free to contact us.",
+    "privacy_policy.additional_text": "The detailed information regarding our privacy practices is provided below."
 }
