--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,8 +3,10 @@
     "home.about": "About me",
     "home.description": "Hello, welcome to my website! My name is Lucas de Brito Silva, and at 24, I embark on an exciting journey in the field of Technology. Since 2021, I made a transition from the area of systems and application development to the fascinating world of data. Currently, I am a Machine Learning Engineer at <a href=\"https://agibank.com.br/en\" class=\"text-white\" target=\"_blank\">Agibank</a>. <br><br>My journey includes training in the Computer Technician course at ETEC Professor Massuyuki Kawano and pioneering in the first class to graduate in Big Data in Agribusiness, at FATEC Shunji Nishimura. Additionally, I've done a master's degree in Computer Science at São Paulo State University \"Júlio de Mesquita Filho\" (UNESP).<br><br>My interests and passions lie in the areas of data, computational intelligence, deep learning, computer vision, and machine learning engineering. I hope you enjoy your visit to my website.",
     "lang": "pt",
-    "nav.publications": "Publications",
     "nav.home": "Home",
+    "nav.publications": "Publications",
+    "nav.portfolio": "Portfolio",
+    "nav.privacy_policy": "Privacy Policy",
     "not_found.sub": "Something went wrong...",
     "not_found.sub_2": "Page not found!",
     "not_found.back_button": "Back to Home",
