Add new descriptions to the Portuguese and English translation files
* **Portuguese translations**
  - Add descriptions for blog, testimonials, share, and newsletter sections in `pt.json`
* **English translations**
  - Add descriptions for blog, testimonials, share, and newsletter sections in `en.json`

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -38,5 +38,13 @@
     "privacy_policy.changes_to_policy_text": "Esta Política de Privacidade pode ser atualizada periodicamente, especialmente em caso de alterações nos serviços de terceiros que utilizamos.",
     "privacy_policy.contact_information": "Informações de Contato",
     "privacy_policy.contact_information_text": "Se você tiver dúvidas ou preocupações sobre esta Política de Privacidade, entre em contato conosco.",
-    "privacy_policy.additional_text": "As informações detalhadas sobre nossas práticas de privacidade estão descritas abaixo."
+    "privacy_policy.additional_text": "As informações detalhadas sobre nossas práticas de privacidade estão descritas abaixo.",
+    "home.blog": "Blog",
+    "home.blog_description": "Bem-vindo ao meu blog! Aqui você encontrará artigos, atualizações e insights sobre ciência de dados, aprendizado de máquina e outras tecnologias. Fique à vontade para explorar e aprender mais.",
+    "home.testimonials": "Depoimentos",
+    "home.testimonials_description": "Veja o que colegas e clientes têm a dizer sobre meu trabalho e minha ética profissional. Seus depoimentos são uma prova do meu compromisso com a excelência.",
+    "home.share": "Compartilhar",
+    "home.newsletter": "Assine a Newsletter",
+    "home.newsletter_email": "Seu email",
+    "home.newsletter_subscribe": "Inscrever-se"
 }
