--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,14 @@
     "home.sub_title": "Technologist in Big Data in Agribusiness",
     "home.about": "About me",
     "home.description": "Hello, welcome to my website! My name is Lucas de Brito Silva, and at 24, I embark on an exciting journey in the field of Technology. Since 2021, I made a transition from the area of systems and application development to the fascinating world of data. Currently, I am a Machine Learning Engineer at <a href=\"https://agibank.com.br/en\" class=\"text-white\" target=\"_blank\">Agibank</a>. <br><br>My journey includes training in the Computer Technician course at ETEC Professor Massuyuki Kawano and pioneering in the first class to graduate in Big Data in Agribusiness, at FATEC Shunji Nishimura. Additionally, I've done a master's degree in Computer Science at São Paulo State University \"Júlio de Mesquita Filho\" (UNESP).<br><br>My interests and passions lie in the areas of data, computational intelligence, deep learning, computer vision, and machine learning engineering. I hope you enjoy your visit to my website.",
+    "home.blog": "Blog",
+    "home.blog_description": "Welcome to my blog! Here, I share articles, updates, and insights related to my field of expertise. Stay tuned for the latest posts and feel free to leave your comments.",
+    "home.testimonials": "Testimonials",
+    "home.testimonials_description": "Read what my colleagues and clients have to say about my work. Their feedback and recommendations are a testament to my dedication and expertise.",
+    "home.share": "Share",
+    "home.newsletter": "Newsletter",
+    "home.newsletter_email": "Email address",
+    "home.newsletter_subscribe": "Subscribe",
     "lang": "pt",
     "nav.home": "Home",
     "nav.publications": "Publications",
