feat: add Books section and update navigation, sitemap, and translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
     "nav.home": "Home",
     "nav.publications": "Publications",
     "nav.portfolio": "Portfolio",
+    "nav.books": "Books",
     "nav.privacy_policy": "Privacy Policy",
     "not_found.sub": "Something went wrong...",
     "not_found.sub_2": "Page not found!",
