--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -6,6 +6,7 @@
     "nav.home": "Início",
     "nav.publications": "Publicações",
     "nav.portfolio": "Portfólio",
+    "nav.books": "Livros",
     "nav.privacy_policy": "Política de Privacidade",
     "not_found.sub": "Ops...",
     "not_found.sub_2": "A página não foi encontrada!",
