refactor: refine search and review labels in i18n files for clarity

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -51,8 +51,8 @@
         "currently_reading": "Currently<br>Reading",
         "description": "Description",
         "read_books": "Read Books",
-        "search_title": "Search by title or author or description",
-        "search_placeholder": "Search title or author or description...",
+        "search_title": "Search by title, author or description",
+        "search_placeholder": "Search title, author or description...",
         "only_this_year": "Only this year",
         "sort": {
             "most_recent": "Most recent",
@@ -63,7 +63,7 @@
             "rating_asc": "Rating ↑"
         },
         "read_at": "Read at",
-        "goodreads_review": "My Goodreads Review",
+        "goodreads_review": "My Review",
         "no_results": "No books found with current filters."
     }
 }
