--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -63,7 +63,7 @@
             "rating_asc": "Avaliação ↑"
         },
         "read_at": "Lido em",
-        "goodreads_review": "Minha avaliação no Goodreads",
+        "goodreads_review": "Minha avaliação",
         "no_results": "Nenhum livro encontrado com os filtros atuais."
     }
 }
